--- a/. github/workflows/pylint.yml
+++ b/. github/workflows/pylint.yml
@@ -28,7 +28,7 @@ jobs:
           black .
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: 'ye kya hua'
+          commit_message: 'ye kya hua vro'
           commit_options: '--no-verify'
           repository: .
           commit_user_name: Javes786
